--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-icons": "^2.1.0",
+		"unplugin-icons": "^0.17.1"
+	}
 }
