--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 log = "0.4.20"
 serde = { version = "1.0.189", features = ["derive"] }
 cargo-watch = "8.4.1"
+sea-orm = { version ="0.12.4",  features = ["sqlx-postgres",  "runtime-tokio"] }
