chore: WIP --> get development setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,4 @@
-FROM rust:latest
-
+FROM rust:1.73-bullseye as   builder
 WORKDIR /usr/src/chipereganyu_api
 
 COPY .env .env
@@ -10,8 +9,19 @@ ENV DB_HOST=${DB_HOST} \
     DB_PASSWORD=${DB_PASSWORD} \
     DB_NAME=${DB_NAME}
 
+
 COPY . .
+
 
 RUN cargo build --release
 
-CMD ["/usr/src/chipereganyu_api"]
+
+FROM debian:buster-slim
+
+WORKDIR /usr/src/chipereganyu_api
+
+COPY --from=builder /usr/src/chipereganyu_api/target/release/chipereganyu_api .
+
+EXPOSE 8777
+
+ENTRYPOINT ["chipereganyu_api"]
