chore: add entities and recreate migrations

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [workspace]
 members = [".", "entity", "migration"]
 
-
 [dependencies]
 entity = { path = "entity" }
 migration = { path = "migration" }
@@ -17,3 +16,5 @@ log = "0.4.20"
 serde = { version = "1.0.189", features = ["derive"] }
 cargo-watch = "8.4.1"
 sea-orm = { version = "0.12.4", features = ["sqlx-postgres", "runtime-tokio"] }
+anyhow = "1.0.75"
+dotenv = "0.15.0"
