--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,3 +18,4 @@ cargo-watch = "8.4.1"
 sea-orm = { version = "0.12.4", features = ["sqlx-postgres", "runtime-tokio"] }
 anyhow = "1.0.75"
 dotenv = "0.15.0"
+uuid = { version = "1.5.0", features = ["v4"] }
